Update responsive styles for smaller screens

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,97 @@
 assets/image database/
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-0.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-1.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-2.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-3.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-4.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-5.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-6.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-7.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-8.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-9.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-10.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-11.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-12.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-13.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-14.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-15.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-16.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-17.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-18.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-19.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-20.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-21.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-22.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-23.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-24.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-25.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-26.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-27.png
+assets/charte-1_1_.png/ad4ff8b4620a45a7cf440f370b1cc4d2WREqLhoDFICKVg18-28.png
+assets/logos/ASW BF.png
+assets/logos/ASW Bl F.png
+assets/logos/ASW O.png
+assets/wetransfer_1_2023-11-17_1038/1/20200827_171359.jpg
+assets/wetransfer_1_2023-11-17_1038/1/20200905_123828.jpg
+assets/wetransfer_1_2023-11-17_1038/1/20200905_135505.jpg
+assets/wetransfer_1_2023-11-17_1038/1/20201014_172330.jpg
+assets/wetransfer_1_2023-11-17_1038/1/20201112_152932.jpg
+assets/wetransfer_1_2023-11-17_1038/1/20201112_164314.jpg
+assets/wetransfer_1_2023-11-17_1038/1/20201116_194647.jpg
+assets/wetransfer_1_2023-11-17_1038/1/20201125_213421.jpg
+assets/wetransfer_1_2023-11-17_1038/1/20220223_191133.jpg
+assets/wetransfer_1_2023-11-17_1038/1/20220224_163043.jpg
+assets/wetransfer_1_2023-11-17_1038/1/20220225_194551.jpg
+assets/wetransfer_1_2023-11-17_1038/1/20220226_083918.jpg
+assets/wetransfer_1_2023-11-17_1038/1/20220226_174618.jpg
+assets/wetransfer_1_2023-11-17_1038/1/IMG-20220101-WA0012.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3359.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3365.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3385.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3403.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3419.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3431.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3469.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3476.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3480.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3483.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3488.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3495.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3514.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3526.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3540.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3546.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3552.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3567.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3568.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3574.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3580.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3586.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3592.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3598.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3608.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3630.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3650.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG_3683.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0018.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0029.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0040.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0048.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0050 - Copie.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0050.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0052.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0059.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0061.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0066.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0068.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0077.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0083.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0097.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0114.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0116.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0122.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0142.jpg
+assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0145.jpg
+services/interim.html
+assets/charte-1_1_.png.zip
+assets/charte 1[1].pdf
