Add PDF files to .gitignore and update links in HTML files

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ assets/wetransfer_1_2023-11-17_1038/a/IMG-20230330-WA0145.jpg
 assets/charte-1_1_.png.zip
 assets/charte 1[1].pdf
 assets/charte 1[1].pdf
+*.pdf
